spacing issues

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -1,4 +1,4 @@
 @import "bootstrap/bootstrap.less";
 .under-nav-offset {
-  padding-top: 45px;
+  padding-top: 50px;
 }
